Rewrite using React
This page has the same functionality as before but it uses React for
generating the DOM.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Seuraavat bussit</title>
-<script src="nextbus.js" defer></script>
-<style></style>
+	<meta charset="UTF-8" />
+	<title>Seuraavat bussit</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.5/react.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.5/react-dom.js"></script>
 </head>
 <body>
-
-<ul id="times">
-</ul>
-
+	<div id="stop"></div>
+	<script src="build/nextbus.js"></script>
 </body>
 </html>
