--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.5/react-dom.js"></script>
 </head>
 <body>
-	<div id="stop"></div>
+	<div id="root"></div>
 	<script src="build/nextbus.js"></script>
 </body>
 </html>
