Simple node server application for the project
This server just serves static files from a few directories.

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
 	<div id="root" class="container-fluid"></div>
-	<script src="build/nextbus.js"></script>
+	<script src="nextbus.js"></script>
 </body>
 </html>
